--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
             <div class="row">
                 <p class="medium-6 columns">&copy; StandardLogo Website</p>
                 <div class="medium-6 columns social">
-                    <a href="http://twitter.com"><img src="img/social/twitter.png" alt="Photo" ></a>
-                    <a href="http://instagram.com"><img src="img/social/instagram.png" alt="Photo" ></a>
-                    <a href="http://facebook.com"><img src="img/social/facebook.png" alt="Photo" ></a>
+                    <a href="http://twitter.com"><img src="img/social/twitter.svg" alt="Photo" ></a>
+                    <a href="http://instagram.com"><img src="img/social/instagram.svg" alt="Photo" ></a>
+                    <a href="http://facebook.com"><img src="img/social/facebook.svg" alt="Photo" ></a>
                 </div>
             </div>
         </footer>
