Replaced font stylesheets with Google fonts in head of index.html, moved script tags for js to bottom of index.html

--- a/index.html
+++ b/index.html
@@ -3,15 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <title>StockPHOTOGRAPHY</title>
-        <script src="js/jquery.js"></script>
-        <script src="js/fastclick.js"></script>
-        <script src="js/foundation.js"></script>
-        <script src="js/foundation.equalizer.js"></script>
-        <script src="js/foundation.reveal.js"></script>
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/foundation.css">
-        <link rel="stylesheet" href="css/arvo.css">
-        <link rel="stylesheet" href="css/ubuntu.css">
+        <link href="https://fonts.googleapis.com/css?family=Arvo|Ubuntu" rel="stylesheet">
         <link rel="stylesheet" href="css/basics.css">
         <link rel="stylesheet" href="css/menu.css">
         <link rel="stylesheet" href="css/hero.css">
@@ -201,6 +195,11 @@
             </div>
             <a class="close-reveal-modal" aria-label="Close">&#215;</a>
         </div>
+        <script src="js/jquery.js"></script>
+        <script src="js/fastclick.js"></script>
+        <script src="js/foundation.js"></script>
+        <script src="js/foundation.equalizer.js"></script>
+        <script src="js/foundation.reveal.js"></script>
         <script>
           $(document).foundation();
         </script>
